<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <ScrollView
            android:id="@+id/mapscroll"
            android:layout_width="match_parent"
            android:layout_height="220dp" >

            <WebView
                android:id="@+id/curmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>

        <TextView
            android:id="@+id/mtgt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/gtitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mtgdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/gdate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mtgtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/gtime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mtgatt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/gattend"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ScrollView
            android:id="@+id/attscroll"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp" >

            <EditText
                android:id="@+id/namefield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textMultiLine|textPersonName" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/getmtgs" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>